feat: ETag/304 listings
Closes #601
